--- a/style.css
+++ b/style.css
@@ -74,6 +74,8 @@ img {
 
 @media screen and (max-width:420px){
 
+    /* section #lezioni */
+
   .row{
     width:100%;
     margin:auto;
@@ -87,4 +89,29 @@ img {
     margin:auto;
     display:block;
   }
+
+  /* section steps */
+
+  #steps .row>.left{
+    width:100%;
+  }
+
+  #steps .row>.central{
+    width:100%;
+  }
+
+  #steps .row>.right {
+    width:100%;
+  }
+
+  #steps .row>.left,
+  #steps .row>.central,
+  #steps .row>.right {
+    margin-bottom:10%;
+  }
+
+  /* section why */
+
+
+
 }
