--- a/style.css
+++ b/style.css
@@ -77,21 +77,40 @@ img {
 @media screen and (max-width:420px){
 
     *{
+      margin:0;
       box-sizing: border-box;
     }
+
+    h3 , img{
+      margin-bottom: 5%;
+      padding-bottom: 5%;
+    }
+
+    hr{
+      margin-top: 5%;
+    }
+
+    .row{
+      width:100%;
+      margin:auto;
+    }
+
     /* section #lezioni */
 
-  .row{
-    width:100%;
-    margin:auto;
-  }
   #lezioni .row>.left{
     width: 100%;
+    padding:5%;
+  }
+  #lezioni .row h1{
+    padding-top:5%;
   }
 
   #lezioni .row >.right{
+    padding-bottom: 5%;
     width:100%;
-    margin-top:10%;
+  }
+  #lezioni .row > .left img{
+    max-width: 100%;
   }
 
   #lezioni .row > .right img{
@@ -116,7 +135,7 @@ img {
   #steps .row>.central,
   #steps .row>.right {
     margin:5% 0;
-    padding:2%;
+    padding:5%;
   }
 
   #steps .row > h1{
@@ -125,11 +144,9 @@ img {
 
   /* section why */
 
-
-  #why .row h1{
-    margin-top:0;
+  #why .row{
+    padding:5%;
   }
-
 }
 
 
@@ -137,11 +154,13 @@ img {
 
   *{
     box-sizing:border-box;
+    margin:0;
   }
 
   .row{
     width:100%;
     margin:auto;
+    padding:5%;
   }
 #lezioni{
   width:100%;
